Here's the commented version of the code:

```c++
// Copyright 2024 gRPC authors.

#include <grpc/event_engine/event_engine.h>

namespace my_application {

// WrappingEventEngine is a decorator class that wraps an existing EventEngine
// implementation while adding additional functionality (in this case, tracking
// run counts). It follows the same interface as EventEngine.
class WrappingEventEngine
    : public grpc_event_engine::experimental::EventEngine {
 public:
  // Constructor creates a new default EventEngine instance to wrap
  WrappingEventEngine()
      : wrapped_engine_(grpc_event_engine::experimental::CreateEventEngine()) {}
  
  // Default destructor
  ~WrappingEventEngine() override = default;

  // Execute a closure immediately on the EventEngine.
  // Increments run counter before delegating to wrapped engine.
  void Run(Closure* closure) override {
    run_count_++;
    wrapped_engine_->Run(closure);
  }

  // Execute an invocable immediately on the EventEngine.
  // Increments run counter before delegating to wrapped engine.
  void Run(absl::AnyInvocable<void()> closure) override {
    run_count_++;
    wrapped_engine_->Run(std::move(closure));
  }

  // Returns the current count of Run operations performed
  int get_run_count() { return run_count_.load(); }

  // Creates a network listener that will call the provided callbacks
  // Delegates all parameters to the wrapped engine
  absl::StatusOr<std::unique_ptr<Listener>> CreateListener(
      Listener::AcceptCallback on_accept,
      absl::AnyInvocable<void(absl::Status)> on_shutdown,
      const grpc_event_engine::experimental::EndpointConfig& config,
      std::unique_ptr<grpc_event_engine::experimental::MemoryAllocatorFactory>
          memory_allocator_factory) override {
    return wrapped_engine_->CreateListener(std::move(on_accept),
                                           std::move(on_shutdown), config,
                                           std::move(memory_allocator_factory));
  }

  // Initiates a connection to the specified address
  // Delegates all parameters to the wrapped engine
  ConnectionHandle Connect(
      OnConnectCallback on_connect, const ResolvedAddress& addr,
      const grpc_event_engine::experimental::EndpointConfig& args,
      grpc_event_engine::experimental::MemoryAllocator memory_allocator,
      Duration timeout) override {
    return wrapped_engine_->Connect(std::move(on_connect), addr, args,
                                    std::move(memory_allocator), timeout);
  }

  // Attempts to cancel an in-progress connection
  // Delegates to the wrapped engine
  bool CancelConnect(ConnectionHandle handle) override {
    return wrapped_engine_->CancelConnect(handle);
  }

  // Returns true if called from a worker thread of this EventEngine
  // Delegates to the wrapped engine
  bool IsWorkerThread() override { return wrapped_engine_->IsWorkerThread(); }

  // Creates a DNS resolver with the specified options
  // Delegates to the wrapped engine
  absl::StatusOr<std::unique_ptr<DNSResolver>> GetDNSResolver(
      const DNSResolver::ResolverOptions& options) override {
    return wrapped_engine_->GetDNSResolver(options);
  }

  // Schedules a closure to run after a delay
  // Delegates to the wrapped engine
  TaskHandle RunAfter(Duration when, Closure* closure) override {
    return wrapped_engine_->RunAfter(when, closure);
  }

  // Schedules an invocable to run after a delay
  // Delegates to the wrapped engine
  TaskHandle RunAfter(Duration when,
                      absl::AnyInvocable<void()> closure) override {
    return wrapped_engine_->RunAfter(when, std::move(closure));
  }

  // Attempts to cancel a scheduled task
  // Delegates to the wrapped engine
  bool Cancel(TaskHandle handle) override {
    return wrapped_engine_->Cancel(handle);
  }

 private:
  // The underlying EventEngine implementation being wrapped
  std::shared_ptr<EventEngine> wrapped_engine_;
  
  // Atomic counter tracking the number of Run operations performed
  std::atomic<int> run_count_{0};
};

} // namespace my_application
```